chore(backend): implemented endpoints: * POST /api/partners/filecoin/sellers * GET /api/partners/filecoin/sellers * GET /api/partners/filecoin/sellers/{id} * PATCH /api/partners/filecoin/sellers/{id} * DELETE /api/partners/filecoin/sellers/{id}
